This file documents the revision history for the SNClient+ agent.

next:
         - support filter regex syntax: attr ~~ /value/

0.10     Sun Oct 22 21:22:47 CEST 2023
         - windows: add firewall on program, not ports
         - add on demand macros
         - add prometheus exporter exporter listener
         - add support for shared listeners

0.09     Sat Oct  7 13:44:18 CEST 2023
         - use shared path as working directory when running external scripts
         - check_network: add name/exclude and speed
         - check_process: fix showing all processes
         - check_drivesize: do not apply default filter if disk is specified


0.08     Thu Sep  7 15:08:07 CEST 2023
         - catch some standard cmd.exe errors
         - skip logrotation if output is not a file
         - make filter keywords are case insensitive
         - improve scripts paths containing spaces
         - add /api/v1/inventory rest path
         - packaging: create logfile folder
         - fix restart after running update from cli

0.07     Wed Aug 30 20:45:50 CEST 2023
         - add support for perf-config option
         - add support for case insensitive regular expression matches
         - add support for case insensitive string matches
         - add support for builtin check_nsc_web
         - improve documentation
         - check_disk: ignore drives which have problems but are not required

0.06     Thu Jul 27 08:31:28 CEST 2023
         - relative include paths are now considered to be in the parent ini-file
         - wmi: improve error handling

0.05     Fri Jul 21 20:24:19 CEST 2023
         - add configuration dialog to .msi installer
         - setup windows firewall rules during installation
         - add wildcard support for includes
         - add conf.d directory support for includes
         - added check_tasksched
         - added nrpe mode to test cmd
         - fix osx installer (#27)
         - fix linux check_drivesize (#14)